--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -107,6 +107,7 @@
         .col-2{
             height: 200px;
             min-width:300px;
+            width:100%;
             object-fit:cover;
             object-position: center center;
         }
